--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ requests==2.23.0
 six==1.15.0
 tornado==6.0.4
 urllib3==1.25.9
+
+pip~=20.2.2
+py~=1.9.0
+colorama~=0.4.3
+setuptools~=47.1.0
+pytest~=6.0.1
